--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,33 @@ node_modules
 # Production
 /dist
 /build
+/frontend/dist
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+backend/venv/
+develop-eggs/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Uploads directory
+uploads/
 
 # Environment files
 .env
@@ -18,6 +45,7 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.log
 
 # Editor directories and files
 .vscode/*
